errors/error_5.txt
In file included from src/drivers/audio/portaudio/stm32f4_pa.c:29:0:
build/base/include/drivers/audio/waverecorder.h:68:13: error: 'WaveRecorder_GPIO_Init' declared 'static' but never defined [-Werror=unused-function]
 static void WaveRecorder_GPIO_Init(void);
             ^
build/base/include/drivers/audio/waverecorder.h:69:13: error: 'WaveRecorder_SPI_Init' declared 'static' but never defined [-Werror=unused-function]
 static void WaveRecorder_SPI_Init(uint32_t Freq);
             ^
build/base/include/drivers/audio/waverecorder.h:70:13: error: 'WaveRecorder_DMA_Init' declared 'static' but never defined [-Werror=unused-function]
 static void WaveRecorder_DMA_Init(void);
             ^
{ echo \
build/base/obj/src/compat/libc/stdio/fprintf.o \
build/base/obj/src/compat/libc/stdio/printf.o; } \
| xargs arm-none-eabi-ar rcs build/base/obj/module/embox/compat/libc/stdio/printf.a
{ echo \
build/base/obj/src/compat/libc/stdio/buf.o \
build/base/obj/src/compat/libc/stdio/fclose.o \
build/base/obj/src/compat/libc/stdio/fflush.o \
build/base/obj/src/compat/libc/stdio/fgetc.o \
build/base/obj/src/compat/libc/stdio/fgets.o \
build/base/obj/src/compat/libc/stdio/fileno.o \
build/base/obj/src/compat/libc/stdio/fioctl.o \
build/base/obj/src/compat/libc/stdio/fprintf.o \
build/base/obj/src/compat/libc/stdio/fread.o \
build/base/obj/src/compat/libc/stdio/printf.o \
build/base/obj/src/compat/libc/stdio/stdio_stubs.o \
build/base/obj/src/compat/libc/stdio/ungetc.o; } \
| xargs arm-none-eabi-ar rcs build/base/obj/module/embox/compat/libc/stdio/file_ops.a
cc1: error: unrecognized command line option '-Wno-nonnull-compare' [-Werror]
cc1: error: unrecognized command line option '-Wno-misleading-indentation' [-Werror]
cc1: all warnings being treated as errors
mk/image_lib.mk:33: recipe for target 'build/base/obj/src/drivers/audio/portaudio/stm32f4_pa.o' failed
make[4]: *** [build/base/obj/src/drivers/audio/portaudio/stm32f4_pa.o] Error 1
mk/build.mk:19: recipe for target 'build' failed
make[3]: *** [build] Error 2
mk/load.mk:41: recipe for target 'build' failed
make[2]: *** [build] Error 2
mk/main.mk:30: recipe for target 'build' failed
make[1]: *** [build] Error 2
Makefile:37: recipe for target 'all' failed
make: *** [all] Error 2

